# Mock-Builder

./: .env.example  .gitignore  JOURNAL.md  LICENSE  PLAN.md  PLAN_v2.md  README.md  SESSION_HANDOFF.md  app_model.schema.json  pyproject.toml  repeating_extractor_poc.py
mockbuilder/: cli.py  models.py
mockbuilder/crawler/: crawler.py  dom.py  records.py
mockbuilder/generator/: generate.py  inject.py
mockbuilder/generator/templates/: App.jsx.jinja  Component.jsx.jinja  GlobalContext.jsx.jinja  Screen.jsx.jinja  package.json.jinja  tailwind.config.js.jinja
mockbuilder/reasoning/: cache.py  prompts.py  reason.py
mockbuilder/recorder/: design_tokens.py  network.py
mockbuilder/verifier/: agent_walk.py  verify.py
tests/: test_crawler_branch_selection.py  test_crawler_records_wiring.py  test_crawler_settle.py  test_crawler_stateful_capture.py  test_design_tokens.py  test_reasoning_cache.py  test_reasoning_primary.py  test_records.py  test_seed_injection.py
tests/fixtures/: accent_fixture.html  ajax_storefront.html  cart_fixture.html  churn_fixture.html  hang_fixture.html  hn_fixture.html  monochrome_fixture.html  multi_collection_fixture.html  shop_fixture.html  skiplink_fixture.html  storefront_fixture.html
tools/: vet_storefront.py
