[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockbuilder"
version = "0.0.0"
description = "MockBuilder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "groq",
    "jsonschema",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
mockbuilder = "mockbuilder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mockbuilder"]
